# wb-top-traveling-analysis

./: .coverage  .gitignore  Dockerfile.airflow  Dockerfile.dashboard  data-dictionary.md  docker-compose.yaml  mwaa-requirements.txt  pyproject.toml  readme.md  requirements.txt  streamlit-dashboard.py  streamlit_dashboard.py  test.ipynb  world_tourism_analysis.pbix  world_tourism_analysis_db.pbix
.github/workflows/: ci-cd.yml  mwaa-actions.yml  s3-cicd.yml  test.yml
config/: dbconfig.py
dags/: dags.py  db_load.py  db_query.py  etl.py  extract-transform.py  requirements.txt
data/: data.csv
src/wb_top_traveling_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wb_travel/: metrics.py
streamlit/: streamlit_dashboard.py  streamlit_data.py
streamlit_folder/: streamlit_dashboard.py
tests/: test_metrics.py
