[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-top-traveling-analysis"
version = "0.1.0"
description = "Analytics proejct of international tourism data provided by World Bank"
readme = "readme.md"
requires-python = ">=3.10"
authors = [{name = "Asa Bejraputra", email = "gamegame.gtboyz@gmail.com "}]
dependencies = [
    "streamlit >=1.24.1",
    "pandas >=2.0.3",
    "numpy >=1.26.4",
    "plotly >=5.16.1",
    "requests >=2.31.0",
    "python-dotenv >=1.0.0",
    "scipy >=1.11.4",
    "huggingface-hub >=0.18.1"
]

[project.optional-dependencies]
dev = [
    "pytest >=7.4.2",
    "pytest-cov >=4.1.0",
    "black >=24.9.1",
    "flake8 >=6.1.0",
    "isort >=5.12.0",
    "mypy >=1.3.0",
    "types-requests"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --tb=short --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true